--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="carousel"  class="carousel slide carousel-fade carousel-position">
             <div class="carousel-inner" style="width: 100%;height: 100%;" id="background">
                 <div class="item active" style="width: 100%;height: 100%;">
-                    <div style="width: 100%;height: 100%;background:url(./img/1.PNG);background-size: cover;"></div>
+                    <div style="width: 100%;height: 100%;background:url(./img/1.jpg);background-size: cover;"></div>
                 </div>
             </div>
         </div>
